@@ -22,9 +22,9 @@ configurations {
 
 dependencies {
     compile group: 'ch.ehi', name: 'ehibasics', version: '1.4.0'
-    compile group: 'ch.interlis', name: 'iox-ili', version: '1.21.5+'
-    compile group: 'ch.interlis', name: 'ili2c-tool', version: "5.1.5"
-    compile group: 'ch.interlis', name: 'ili2c-core', version: "5.1.5"
+    compile group: 'ch.interlis', name: 'iox-ili', version: '1.21.6+'
+    compile group: 'ch.interlis', name: 'ili2c-tool', version: "5.2.1+"
+    compile group: 'ch.interlis', name: 'ili2c-core', version: "5.2.1+"
     testCompile group: 'junit', name: 'junit', version: '4.12'
     deployerJars "org.apache.maven.wagon:wagon-ftp:3.3.3"
     deployerJars "org.apache.maven.wagon:wagon-ssh:3.3.3"
