@@ -1,6 +1,8 @@
 LATEST VERSION
 -----------------------------
-- iox-ili-1.21.5-SNAPSHOT
+- implement INTERLIS RunTimeParameterDef (#221) 
+- iox-ili-1.21.6-SNAPSHOT
+- ili2c-5.2.1-SNAPSHOT
 
 ilivalidator 1.11.9 (2020-12-28)
 -----------------------------
